--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "element-ui": "^2.13.1",
+    "swiper": "^5.4.5",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
