--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "dongqiangbutton": "^1.0.0",
     "element-ui": "^2.13.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "swiper": "^5.4.5",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.1",
@@ -42,7 +45,11 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "preload-webpack-plugin": "^2.3.0",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^2.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
