--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dongqiangbutton": "^1.0.0",
     "element-ui": "^2.13.1",
     "node-sass": "^4.14.1",
+    "qs": "^6.10.1",
     "sass-loader": "^7.3.1",
     "swiper": "^5.4.5",
     "vue": "^2.5.2",
